Bug 324708 - Crash when launching second user desktop
Summary: Crash when launching second user desktop
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR crash
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-09 17:13 UTC by Jonathan Riddell
Modified: 2024-12-23 18:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2013-09-09 17:13:47 UTC
When I launch a second user desktop I get a crash in plasma-nm

Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f50a76127c0 (LWP 2710))]

Thread 4 (Thread 0x7f508ba28700 (LWP 2712)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f50a02ac07b in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f50a02ac0b9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f509a965f6e in start_thread (arg=0x7f508ba28700) at pthread_create.c:311
#4  0x00007f50a6ef9e2d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f500a07d700 (LWP 2713)):
#0  0x00007f50a6eed3dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f509a25b5c4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f509a25b6cc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f50a3ac1a76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f50a3a935ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f50a3a938e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f50a399288f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f50a3a74d13 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f50a3994f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f509a965f6e in start_thread (arg=0x7f500a07d700) at pthread_create.c:311
#10 0x00007f50a6ef9e2d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f5008d2a700 (LWP 2714)):
#0  0x00007f50a6eed3dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f509a25b5c4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f509a25b6cc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f50a3ac1a76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f50a3a935ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f50a3a938e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f50a399288f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f50a3a74d13 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f50a3994f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f509a965f6e in start_thread (arg=0x7f5008d2a700) at pthread_create.c:311
#10 0x00007f50a6ef9e2d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f50a76127c0 (LWP 2710)):
[KCrash Handler]
#5  0x00007f4fefe28f56 in NetworkManager::WirelessSetting::d_func() const () from /usr/lib/libNetworkManagerQt.so.0
#6  0x00007f4fefe26068 in NetworkManager::WirelessSetting::ssid() const () from /usr/lib/libNetworkManagerQt.so.0
#7  0x00007f4ff00dda5d in ConnectionIcon::setIcons (this=0x30dfb00) at /home/jr/src/plasma-nm/git/plasma-nm/declarative-plugins/applet/connectionicon.cpp:179
#8  0x00007f4ff00de0d6 in ConnectionIcon::init (this=<optimized out>) at /home/jr/src/plasma-nm/git/plasma-nm/declarative-plugins/applet/connectionicon.cpp:67
#9  0x00007f4ff00d8de5 in ConnectionIcon::qt_static_metacall (_o=_o@entry=0x30dfb00, _id=_id@entry=7, _a=_a@entry=0x7fff786a9b80, _c=QMetaObject::InvokeMetaMethod) at /home/jr/src/plasma-nm/git/plasma-nm/build/declarative-plugins/moc_connectionicon.cpp:88
#10 0x00007f4ff00da993 in qt_static_metacall (_a=0x7fff786a9b80, _id=7, _c=QMetaObject::InvokeMetaMethod, _o=0x30dfb00) at /home/jr/src/plasma-nm/git/plasma-nm/build/declarative-plugins/moc_connectionicon.cpp:136
#11 ConnectionIcon::qt_metacall (this=0x30dfb00, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff786a9b80) at /home/jr/src/plasma-nm/git/plasma-nm/build/declarative-plugins/moc_connectionicon.cpp:137
#12 0x00007f50a578f22e in ?? () from /usr/lib/x86_64-linux-gnu/libQtDeclarative.so.4
#13 0x00007f50a57908b3 in ?? () from /usr/lib/x86_64-linux-gnu/libQtDeclarative.so.4
#14 0x00007f50a579132b in ?? () from /usr/lib/x86_64-linux-gnu/libQtDeclarative.so.4
#15 0x00007f50a03232f4 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#16 0x00007f50a021e228 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#17 0x00007f50a01fc0c0 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#18 0x00007f500b1aa38f in ?? ()
#19 0x0000000000000000 in ?? ()


Reproducible: Always

Steps to Reproduce:
1. create a new user
2. kickoff->new session
3. login
Actual Results:  
crash before plasma loads

Expected Results:  
plasma should load
Comment 1 Jan Grulich 2013-09-09 17:32:50 UTC
Do you have current git snapshot?
Comment 2 Jonathan Riddell 2013-09-09 20:48:21 UTC
Yes, compiled it fresh for this bug report
Comment 3 Jan Grulich 2013-09-09 22:23:01 UTC
Git commit 7bb2b7701ddc37dc57a01bd9a2bc0860e2167baf by Jan Grulich.
Committed on 09/09/2013 at 22:22.
Pushed by grulich into branch 'master'.

Get SSID from access point instead of from connection settings

Because it looks that sometimes connection settings doesn't exist

M  +17   -7    declarative-plugins/applet/connectionicon.cpp

http://commits.kde.org/plasma-nm/7bb2b7701ddc37dc57a01bd9a2bc0860e2167baf
Comment 4 Ben Cooksley 2024-12-23 18:25:59 UTC
Bulk transfer as requested in T17796