Get SSID from access point instead of from connection settings

Because it looks that sometimes connection settings doesn't exist

BUG:324708